--- a/halaman2.html
+++ b/halaman2.html
@@ -10,6 +10,7 @@
 			<h1>ABDUL ROOFI'U</h1>
 			<div class="text">Web Developer from <strong>Yogyakarta, Indonesia</strong></div>
 			<p> Halo , Saya adalah mahasiswa STMIK AKAKOM </p>
+			<p> NIM 195411042 </p>
 			<ul>
 				<li><a href="#"><img src="gambar/fb.png" width="80px" height="80px"></a></li>
 				<li><a href="#"><img src="gambar/tl.png" width="80px" height="80px"></a></li>
