Menambahkan nama kelompok dan merubah seikit tampilan

--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
 	<body>
 		<div class="main">
 			<div class="img"></div>
-			<h1>ABDUL ROOFI'U</h1>
-			<div class="text">Web Developer from <strong>Yogyakarta, Indonesia</strong></div>
-			<p> Halo , Saya adalah mahasiswa STMIK AKAKOM </p>
+			<h1>Disusun oleh :</h1>
+			<div class="text">Abdul Roofi'u <strong> (195411042)</strong></div>
+			<div class="text">Tomy <strong> (195411042)</strong></div>
+			<div class="text">Dwi Suluh <strong> (195411042)</strong></div>
+			
+			<p> <strong>Tentang Kami</strong></p>
+			<p> Ini adalah sebuah web statis untuk memenuhi tugas mata kuliah Praktikum Teknologi Cloud Computing</p>
 			<ul>
 				<li><a href="#"><img src="gambar/fb.png" width="80px" height="80px"></a></li>
 				<li><a href="#"><img src="gambar/tl.png" width="80px" height="80px"></a></li>
